--- a/notebooks/feature_analysis.ipynb
+++ b/notebooks/feature_analysis.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7a6e385d",
+   "metadata": {},
+   "source": [
+    "# ============================================================\n",
+    "# File Name: feature_analysis.ipynb\n",
+    "# Description:\n",
+    "#   This notebook performs a structured feature analysis workflow,\n",
+    "#   including library imports, exploratory steps, and code-driven evaluations.\n",
+    "#\n",
+    "# Purpose:\n",
+    "#   To analyze and understand the behavior, relevance, and structure of features\n",
+    "#   within a dataset as part of a broader data exploration or modeling pipeline.\n",
+    "#\n",
+    "# Challenges:\n",
+    "#   Organizing the analysis workflow into clean, traceable sections\n",
+    "#   and ensuring each step provides meaningful insights into the data.\n",
+    "# ============================================================\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e8f23929",
    "metadata": {},
    "outputs": [
@@ -509,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d58ba4c5",
    "metadata": {},
    "outputs": [
@@ -560,7 +581,7 @@
     "    print(f\"  Encoded mapping: {encoding_map[col]}\")\n",
     "\n",
     "print(\"\\nCategorical encoding done\")\n",
-    "print(f\"Encoded {len(categorical_cols)} columns\")"
+    "print(f\"Encoded {len(categorical_cols)} columns\")\n"
    ]
   },
   {
